--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box; /* Asegura que el tamaño total incluya el relleno y el borde */
+    box-sizing: border-box;
 }
 
 #printData {
@@ -80,7 +80,7 @@
 
 .li-modal {
     color: white;
-    flex: 0 0 calc(25% - 10px); /* Divide la lista en 3 columnas */
-    max-width: calc(25% - 10px); /* Limita el ancho máximo de cada elemento */
+    flex: 0 0 calc(25% - 10px);
+    max-width: calc(25% - 10px);
 }
 
